Update 'ze5x135ms-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:b48ce360ca09fdfe11c74cd6a848e155b52aca79@sha256:7b2cb3566c9c45d73a787b351b3b3002a69df47a2494eaa75eed20b0ab291c54

--- a/components/ze5x135ms-python/overlays/development/deployment-patch.yaml
+++ b/components/ze5x135ms-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ze5x135ms-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:b48ce360ca09fdfe11c74cd6a848e155b52aca79@sha256:7b2cb3566c9c45d73a787b351b3b3002a69df47a2494eaa75eed20b0ab291c54
+          name: container-image
